No longer required with bytecode generator switched.