@@ -544,7 +544,6 @@
                     <configuration>
                         <argLine>@{argLine} --add-opens=java.base/sun.security.ssl=ALL-UNNAMED
                             --add-opens=java.base/sun.security.util=ALL-UNNAMED
-                            --add-opens=java.base/java.lang=ALL-UNNAMED
                             -Djava.library.path=${project.build.directory}
                         </argLine>
                         <systemPropertyVariables>
@@ -574,7 +573,6 @@
                         <encoding>UTF-8</encoding>
                         <argLine>@{argLine} --add-opens=java.base/sun.security.ssl=ALL-UNNAMED
                             --add-opens=java.base/sun.security.util=ALL-UNNAMED
-                            --add-opens=java.base/java.lang=ALL-UNNAMED
                             -Djava.library.path=${project.build.directory}
                         </argLine>
                         <systemPropertyVariables>
